changed links so that they don't reload the site; keep state when navigating
